# usdAssets

./: README.md  pyproject.toml
assets/: bunny.usda  red_sphere.usda
scripts/: articulation.py  articulation.usda  basic_physics.py  basic_physics.usda  collision.py  collision.usda  collision_all_kind.py  collision_all_kind.usda  collision_capsule.py  collision_capsule.usda  collision_mesh.py  collision_mesh.usda  collision_wheel.py  collision_wheel.usda  composition.py  composition.usda  generate_all.py  joint.py  joint.usda  override.py  override_bunny_collider.usda  shadow.py  shadow.usda  stage_view.py
