[tool.poetry]
name = "usdAssets"
version = "0.1.0"
description = ""
authors = ["yangfengzzz <yangfengzzz@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "<2.0.0"
usd-core = "^24.8"
types-usd = "^24.5.1"
pyside6 = "^6.8.0.2"
pyopengl = "^3.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
